# Synthortion

./: .gitignore  .gitmodules  AGENTS.md  AudioPluginHost.exe - collegamento.lnk  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  UBIQUITOUS_LANGUAGE.md  github_workflows_macos-vst3-build.yml  package-lock.json  package.json  skills-lock.json
.github/workflows/: macos_build.yml
.sandcastle/: .env.example  CODING_STANDARDS.md  Dockerfile  implement-prompt.md  main.mts  merge-prompt.md  plan-prompt.md  project-context.md  review-prompt.md
docs/superpowers/plans/: 2026-05-09-audio-thread-safety-dsp-fixes.md  2026-05-09-knob-caching-paint-optimization.md  2026-05-09-lock-free-audio-gui-communication.md  2026-05-09-opengl-spectrum-analyzer.md  2026-05-09-parameter-mapping-fixes.md  2026-05-16-synthortion-chorus-command-macro.md
plugin/: CMakeLists.txt
plugin/UI/: .gitignore  AGENTS.md  README.md  components.json  index.html  package.json  tsconfig.json  vite.config.js  vite.config.ts
plugin/UI/.builder/rules/: deploy-app.mdc  organize-ui.mdc
plugin/UI/client/: App.tsx  global.css  main.tsx  vite-env.d.ts
plugin/UI/client/components/: VSTInterface.tsx
plugin/UI/client/components/ui/: EQSection.tsx  Knob.tsx  LevelMeter.tsx  Select.tsx  VSTDisplay.tsx  use-toast.ts
plugin/UI/client/hooks/: use-mobile.tsx  useJuceIntegration.ts
plugin/UI/client/pages/: Index.tsx  NotFound.tsx
plugin/UI/client/types/: juce.d.ts
plugin/UI/public/: robots.txt
plugin/UI/src/: main.tsx
plugin/include/Synthortion/: AnalogLookAndFeel.h  AnimatedKnob.h  AnimationController.h  AudioScopeRingBuffer.h  Bitcrusher.h  BypassComponent.h  BypassSwitch.h  GlitchOverlay.h  InteractiveEQ.h  MeterComponent.h  OscilloscopeComponent.h  PanelComponent.h  ParametricEQ.h  PingPongDelay.h  PluginEditor.h  PluginProcessor.h  SpectrumAnalyzer.h  SynthortionChorus.h  SynthortionLookAndFeel.h  VerticalDiscreteMeter.h  WarmDistortion.h
plugin/src/: AnalogLookAndFeel.cpp  AnimatedKnob.cpp  AnimationController.cpp  AudioScopeRingBuffer.cpp  BitCrusher.cpp  BypassComponent.cpp  BypassSwitch.cpp  GlitchOverlay.cpp  InteractiveEQ.cpp  MeterComponent.cpp  OscilloscopeComponent.cpp  PanelComponent.cpp  ParametricEQ.cpp  PingPongDelay.cpp  PluginEditor.cpp  PluginProcessor.cpp  SpectrumAnalyzer.cpp  SynthortionChorus.cpp  SynthortionLookAndFeel.cpp  VerticalDiscreteMeter.cpp  WarmDistortion.cpp
plugin/tests/: AudioPluginTest.cpp  AudioPluginTest.h  Main.cpp
